--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@nuxt/test-utils": "3.20.1",
     "@nuxt/ui": "4.1.0",
     "@nuxtjs/google-fonts": "^3.2.0",
+    "@portabletext/vue": "^1.0.14",
+    "@sanity/client": "^7.13.0",
     "@tailwindcss/vite": "^4.1.17",
-    "@vueuse/core": "^14.0.0",
+    "@vueuse/core": "^13.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "eslint": "^9.39.1",
@@ -26,9 +28,7 @@
     "nuxt": "^4.2.1",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17",
-    "typescript": "^5.9.3",
-    "vue": "^3.5.24",
-    "vue-router": "^4.6.3"
+    "typescript": "^5.9.3"
   },
   "devDependencies": {
     "tw-animate-css": "^1.4.0"
