feat: blog, style improvements and refactor code base

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,5 +14,11 @@
     {
       "path": "./.nuxt/tsconfig.node.json"
     }
-  ]
+  ],
+    "compilerOptions": {
+    "types": [
+      "@nuxt/types",
+      "@nuxtjs/date-fns"
+    ]
+  }
 }
