--- a/package.json
+++ b/package.json
@@ -31,11 +31,6 @@
     "typescript": "^5.9.3"
   },
   "devDependencies": {
-    "@iconify/json": "^2.2.409",
-    "@iconify/utils": "^3.0.2",
-    "@unocss/nuxt": "^66.5.9",
-    "@unocss/preset-icons": "^66.5.9",
-    "tw-animate-css": "^1.4.0",
-    "unocss": "^66.5.9"
+    "tw-animate-css": "^1.4.0"
   }
 }
