--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "nuxt": "^4.2.1",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "vite-svg-loader": "^5.1.0"
   },
   "devDependencies": {
     "tw-animate-css": "^1.4.0"
