--- a/.env-exmple
+++ b/.env-exmple
@@ -1,2 +1,9 @@
 NUXT_PUBLIC_SANITY_PROJECT_ID=PROJECT_ID
 NUXT_PUBLIC_SANITY_DATASET=DATASET
+
+VITE_FIREBASE_API_KEY=API_KEY
+VITE_FIREBASE_AUTH_DOMAIN=AUTH_DOMAIN
+VITE_FIREBASE_PROJECT_ID=PROJECT_ID
+VITE_FIREBASE_STORAGE_BUCKET=STORAGE_BUCKET
+VITE_FIREBASE_MESSAGING_SENDER_ID=MESSAGING_SENDER_ID
+VITE_FIREBASE_APP_ID=APP_ID
