--- a/package.json
+++ b/package.json
@@ -23,13 +23,17 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "eslint": "^9.39.1",
+    "firebase": "^12.6.0",
+    "firebase-admin": "^13.6.0",
     "lucide-vue-next": "^0.554.0",
     "motion-v": "^1.7.4",
     "nuxt": "^4.2.1",
+    "nuxt-toast": "^1.4.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17",
     "typescript": "^5.9.3",
-    "vite-svg-loader": "^5.1.0"
+    "vite-svg-loader": "^5.1.0",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "tw-animate-css": "^1.4.0"
