feat: captcha validation for public contact form api

--- a/.env-exmple
+++ b/.env-exmple
@@ -7,3 +7,6 @@ VITE_FIREBASE_PROJECT_ID=PROJECT_ID
 VITE_FIREBASE_STORAGE_BUCKET=STORAGE_BUCKET
 VITE_FIREBASE_MESSAGING_SENDER_ID=MESSAGING_SENDER_ID
 VITE_FIREBASE_APP_ID=APP_ID
+
+NUXT_PUBLIC_CAPTCHA_SITE_KEY=SITE_KEY
+CAPTCHA_SECRET_KEY=SECRET_KEY
